--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-svg": "^15.1.7",
     "sass": "^1.54.4"
   },
   "devDependencies": {
